# csrf_killer

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  helper.rs  lib.rs  main.rs  repeater.rs  requester.rs  structs.rs
src/util/: cli.rs  helper.rs  mod.rs  structs.rs
test_server/: login.py  main.py  route.py  upload.py
