[package]
name = "csrf_killer"
version = "0.3.1"
author = "TinajaStyle"
edition = "2021"
repository = "https://github.com/TinajaStyle/csrf_killer"
description = "A tool designed to simplify security testing by automating the exploitation of CSRF defenses"
keywords = ["pentest", "url-bruteforce"]

[dependencies]
reqwest = {version = "0.12.7", features = ["json", "multipart", "cookies"]}
clap = { version = "4.5.16", features = ["cargo", "derive"] }
tokio = { version = "1.39.3", features = ["full"] }
regex = "1.10.6"
serde_json = "1.0.127"
log = "0.4.22"
env_logger = "0.11.5"
indicatif = "0.17.8"
mime_guess = "2.0.5"
